SC-000: Updated docker file